apps/media/tautulli/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tautulli
  namespace: media
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels: {}
  strategy:
    type: Recreate
  template:
    metadata:
      labels: {}
    spec:
      containers:
        - name: tautulli
          image: ghcr.io/linuxserver/tautulli:v2.13.1-ls96
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8181
          startupProbe:
            httpGet:
              path: /status
              port: http
            initialDelaySeconds: 20
            failureThreshold: 30
            timeoutSeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /status
              port: http
            initialDelaySeconds: 20
            failureThreshold: 5
            timeoutSeconds: 3
            periodSeconds: 30
          resources: {}
          volumeMounts:
            - name: data
              mountPath: /config
            - name: backup
              mountPath: /config/backups
            - name: init-tautulli-config
              mountPath: /etc/s6-overlay/s6-rc.d/init-tautulli-config/run
              subPath: run
      restartPolicy: Always
      automountServiceAccountToken: false
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: tautulli-data
        - name: backup
          persistentVolumeClaim:
            claimName: tautulli-backup
        - name: init-tautulli-config
          configMap:
            name: init-tautulli-config
            items:
              - key: init-tautulli-config.sh
                path: run
            defaultMode: 0755
