apps/media/tautulli/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tautulli
  namespace: media
  annotations:
    cf.containeroo.ch/ignore: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: tautulli.local.${BASE_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tautulli
                port:
                  name: http
